[gd_scene load_steps=6 format=3 uid="uid://8ms6avyttf74"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_1uv25"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="2_51glp"]
[ext_resource type="Script" path="res://Scenes/mines_display.gd" id="3_4s01b"]
[ext_resource type="Texture2D" uid="uid://b6k27vep2yecr" path="res://Assets/UI/grey_panel.png" id="4_qoscf"]
[ext_resource type="Script" path="res://Scenes/navigation_menu.gd" id="4_qxaar"]

[node name="Main" type="Node2D"]

[node name="Game" type="Node2D" parent="."]
script = ExtResource("1_1uv25")

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 800.0
script = ExtResource("2_51glp")

[node name="PanelBackground" type="NinePatchRect" parent="UI"]
auto_translate_mode = 1
self_modulate = Color(0.176471, 0.196078, 0.313726, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qoscf")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="NavigationMenu" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 5.0
offset_top = 110.0
offset_right = 205.0
offset_bottom = 795.0
script = ExtResource("4_qxaar")

[node name="PanelBackground" type="NinePatchRect" parent="UI/NavigationMenu"]
self_modulate = Color(0.258824, 0.278431, 0.411765, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qoscf")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Mines" type="Button" parent="UI/NavigationMenu"]
z_index = 1
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 195.0
offset_bottom = 50.0
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Mines"
flat = true
expand_icon = true

[node name="Panel" type="NinePatchRect" parent="UI/NavigationMenu/Mines"]
auto_translate_mode = 1
self_modulate = Color(0.439216, 0.466667, 0.631373, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qoscf")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Furnaces" type="Button" parent="UI/NavigationMenu"]
auto_translate_mode = 1
z_index = 1
offset_left = 5.0
offset_top = 50.0
offset_right = 195.0
offset_bottom = 95.0
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Furnaces"
flat = true
expand_icon = true

[node name="Panel" type="NinePatchRect" parent="UI/NavigationMenu/Furnaces"]
auto_translate_mode = 1
self_modulate = Color(0.439216, 0.466667, 0.631373, 1)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qoscf")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Displays" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 210.0
offset_top = 110.0
offset_right = 1195.0
offset_bottom = 795.0

[node name="PanelBackground" type="NinePatchRect" parent="UI/Displays"]
auto_translate_mode = 1
self_modulate = Color(0.258824, 0.278431, 0.411765, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qoscf")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MinesDisplay" type="Control" parent="UI/Displays"]
unique_name_in_owner = true
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 110.0
offset_right = -40.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4s01b")

[node name="FurnaceDisplay" type="RichTextLabel" parent="UI"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 266.67
offset_right = -600.0
offset_bottom = -266.66
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="ManufactoryDisplay" type="RichTextLabel" parent="UI"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_bottom = -533.33
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="InventoryDisplay" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 533.33
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
